Выполненный функционал: Регистрация физ. лица Авторизация Просмотр информации о себе (физ. лицо) Обновление физ. лица
Осталось:
Починить тесты
Вынести дто в отдельный модуль