@@ -8,9 +8,14 @@ import net.proselyte.individualsapi.dto.*;
 import net.proselyte.individualsapi.exception.KeycloakBadRequestException;
 import net.proselyte.individualsapi.exception.KeycloakUserNotFoundException;
 import net.proselyte.individualsapi.exception.NotAuthorizedException;
+import org.keycloak.admin.client.CreatedResponseUtil;
+import org.keycloak.admin.client.Keycloak;
+import org.keycloak.admin.client.resource.RoleResource;
 import org.keycloak.admin.client.resource.UsersResource;
 import org.keycloak.representations.idm.CredentialRepresentation;
+import org.keycloak.representations.idm.RoleRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
+import org.keycloak.representations.userprofile.config.UPConfig;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
@@ -20,6 +25,7 @@ import reactor.core.publisher.Mono;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 @Slf4j
 @Service
@@ -30,9 +36,11 @@ public class KeycloakService {
 
     private final KeycloakConfig keycloakConfig;
     private final UsersResource usersResource;
+    private final Keycloak keycloak;
 
     public Mono<IndividualDto> register(String username, String password, String firstName, String lastName, String email) {
         CredentialRepresentation credential = createPasswordCredentials(password);
+
         UserRepresentation user = new UserRepresentation();
         user.setUsername(username);
         user.setFirstName(firstName);
@@ -44,6 +52,22 @@ public class KeycloakService {
 
         try (Response response = usersResource.create(user)) {
             if (response.getStatus() == HttpStatus.CREATED.value()) {
+
+                String createdId = CreatedResponseUtil.getCreatedId(response);
+
+                keycloak.realm("hypercore")
+                        .clients()
+                        .findByClientId("hypercore")
+                        .forEach(clientRepresentation -> {
+                            RoleRepresentation representation = keycloak.realm("hypercore").clients()
+                                    .get(clientRepresentation.getId()).roles().get("client_user").toRepresentation();
+                            keycloak.realm("hypercore")
+                                    .users()
+                                    .get(createdId)
+                                    .roles().clientLevel(clientRepresentation.getId())
+                                    .add(List.of(representation));
+                        });
+
                 return getUserByUsername(username);
             } else {
                 KeycloakErrorDto keycloakErrorDto = response.readEntity(KeycloakErrorDto.class);
@@ -74,7 +98,7 @@ public class KeycloakService {
     public Mono<IndividualDto> getUserByUsername(String username) {
         List<UserRepresentation> search = usersResource.search(username);
         if (search.size() == 1) {
-            UserRepresentation searchingUser = search.get(0);
+            UserRepresentation searchingUser = search.getFirst();
 
             return Mono.just(IndividualDto.builder()
                             .id(searchingUser.getId())
